test/analyze/type_check/binary_operation/shift.exp
Error: Expected type `Int` but found `Long`
test/analyze/type_check/binary_operation/shift.myte:17:3-24
 17 |   ((1: Long) << (2: Int): Int);
    |    ^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/shift.myte:20:2-6
 20 |   true << 2;
    |   ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/shift.myte:21:2-6
 21 |   true >> 2;
    |   ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/shift.myte:22:2-6
 22 |   true >>> 2;
    |   ^^^^

Error: Expected type `Int` but found `Double`
test/analyze/type_check/binary_operation/shift.myte:23:2-5
 23 |   1.0 >>> 2;
    |   ^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/shift.myte:26:7-11
 26 |   3 << true;
    |        ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/shift.myte:27:7-11
 27 |   3 >> true;
    |        ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/shift.myte:28:8-12
 28 |   3 >>> true;
    |         ^^^^

Error: Expected type `Int` but found `Double`
test/analyze/type_check/binary_operation/shift.myte:29:8-11
 29 |   3 >>> 1.0;
    |         ^^^